Thu Jun  1 12:55:07 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Display/NavDisplay/NavDisplay.mpc:

          Fixed typo.

Wed May 31 18:46:37 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Display/NavDisplay/NavDisplay.mpc:

          Added 'libs += Display_Base_stub' to the
          Display_Base_NaviDisplay_stub project so that VC8, with its
          parallel builds, will know about the dependency that VC7.1
          seems to get from the 'after' line.

Wed May 31 18:17:11 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/TargetManager/TM_Client.mpc:

          Cosmetic changes.

Wed May 31 17:08:17 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Planner/Planner.mpc
        * DAnCE/Planner/Planner.cpp

          Removed the generated file of Repoman (RepositoryManagerDaemonC.*)
          included in the Planner project and use the RepositoryManagerC.*.

Wed May 31 16:49:12 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp

          Made some minor changes.

Tue May 30 10:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/MonitorController.cpp:
          Fixed typo

Tue May 30 06:16:58 UTC 2006  Boris Kolpackov  <boris@kolpackov.net>

        * tools/Config_Handlers/XSCRT/Elements.hpp:

          Added a fix for Sun C++ <= 5.7 template instantiation issue.

Tue May 30 00:00:22 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/Planner/Node_T.h:
        * DAnCE/Planner/Node_T.inl:
        * DAnCE/Planner/Node_T.cpp:
        * DAnCE/Planner/PCVisitor.h:
        * DAnCE/Planner/PCVisitor.cpp:
        * DAnCE/Planner/PCVisitorBase.h:
        * DAnCE/Planner/PCVisitorBase.inl:
        * DAnCE/Planner/PCVisitorBase.cpp:
        * DAnCE/Planner/Planner.mpc:
        * DAnCE/Planner/Planner.cpp:
